@@ -1,3 +1,4 @@
+	- Hero can fetch boots and then jump higher.
 	- Hero can use teleporters.
 	- Hero can shoot boxes.
 	- Keyhole stops blinking after key insert.
